<resources>
    <string name="app_name">SA Lotto</string>
    <string name="app_share">★Lucky SA Lotto★\n</string>

    <string name="Gen_btn3">[NUMBERS SHARE]</string>
    <string name="btn_save">[SAVE]</string>
    <string name="Gen_btnf31">[LOTTO NUMBERS GEN]</string>
    <string name="Gen_btnf32">[POWER BALL NUMBERS GEN]</string>
    <string name="Gen_btnf33">[DAILY LOTTO NUMBERS GEN]</string>
    <string name="btn_list">[SHOW LIST]</string>



    <string name="btn_save_Mesg1">Please generation a number!!!</string>

    <string name="tab_text1">SA Lotto\nLotto and plus1,2</string>
    <string name="tab_text2">SA Lotto\nPower Ball and Plus</string>
    <string name="tab_text3">SA Lotto\nLotto , Power Ball</string>
    <string name="tab_info1">First Presse GEN Button</string>
    <string name="bottom_text1">Home</string>
    <string name="bottom_text2">Result</string>
    <string name="bottom_text3">Past Draws</string>
    <string name="bottom_text4">NEWS</string>
    <string name="bottom_text5">MDCT</string>
    <string name="listLast_Meg1">Last Number is Bonus or PB number</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Search XML Parse</string>
    <string name="ranklabel">"Rank : "</string>
    <string name="countrylabel">"Country : "</string>
    <string name="populationlabel">"Population : "</string>

    <string name="FeedLink1">http://mdbp.org/sa-news/feed/</string>
    <!--<string name="FeedLink2">http://feeds.bbci.co.uk/news/world/africa/rss.xml</string>-->
    <string name="FeedLink3">https://twitrss.me/twitter_user_to_rss/?user=sa_lottery</string>

    <string name="active_one">http://www.lotteryextreme.com/south_africa/</string>

    <string name="newsfeed1">"http://feeds.news24.com/articles/news24/SouthAfrica/rss"</string>
    <string name="newsfeed2">https://news.google.com/news/rss</string>

    //adsen admob String
    <string name="banner_ad_unit_id1">ca-app-pub-5187489598351901/5126781367</string>
    <string name="banner_ad_unit_id2">ca-app-pub-5187489598351901/3193030399</string>
    <string name="banner_ad_unit_id3">ca-app-pub-5187489598351901/5897771704</string>
    <string name="google_adsene_id">ca-app-pub-5187489598351901~6823006419</string>
    <string name="google_app_id">1:297237916848:android:d6dfc2bc8280b506</string>



    <string name="mdct">MDCT</string>

    <!--2018-6월 이후 로또 이력 자료 -->
    <!--lotto-->
    <string name="JsoupLink1">"http://www.lotteryextreme.com/south_africa/lotto-results_history.php"</string>
    <!--lotto Pluse-->
    <string name="JsoupLink2">"http://www.lotteryextreme.com/south_africa/lottoplus-results_history.php"</string>
    <!--PowerBall-->
    <string name="JsoupLink3">"http://www.lotteryextreme.com/south_africa/powerball-results_history.php"</string>
    <!--PowerBall Pluse-->
    <string name="JsoupLink4">"http://www.lotteryextreme.com/south_africa/powerballplus-results_history.php"</string>

    <string name="JsoupLink5">"http://www.lotteryextreme.com/south_africa/dailylotto-results_history"</string>


    <string name="jsoup_q1">"title"</string>
    <string name="jsoup_q2">".f13"</string>
    <string name="jsoup_q3">".lotterygame2"</string>
    <string name="jsoup_q4">".results2"</string>

    //=====================================================================================================

    <string name="scr_EXIT_Mesg1">Do you want to EXIT?</string>
    <string name="scr_EXIT_Mesg2">AD Show after EXIT</string>
    <string name="scr_EXIT_Mesg3">EXIT</string>

    //network Error Message
    <string name="net_Info1">Network Error!</string>
    <string name="net_Info2">Please ON Wifi OR Mobile Network</string>
    <string name="net_Info3">Need Internet!!!</string>
    <string name="net_Info">Your Network is Somthing Wrong!!!</string>


    //Note String
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Notes</string>
    //저장한 번호가 없다.
    <string name="msg_no_notes">Not Found Number List。</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter your note!</string>

    <string name="select_list">Long click is to delete number</string>
    <string name="delete_list">Do you want to delete the number?</string>
</resources>
